# fireperim-live

./: .gitignore  DEMO_SCRIPT.md  FirePerim_Live_Technical_Report.docx  Georef_Telemetry_OnePager.md  Georef_Telemetry_metrics.json  Optical_Restore_OnePager.md  Optical_Restore_metrics.json  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
api/: README.md  __init__.py  main.py  pipeline.py  requirements.txt  test_api.py
data/sample/: viirs_california_sample.csv
raster/: README.md  __init__.py  airborne.py  georef.py  multipass.py  optical_restore.py  ortho.py  requirements.txt
scripts/: build_multipass_demo.py  build_ortho_demo.py  build_raster_demo.py  fetch_sample.py
src/fireperim/: __init__.py  config.py
src/fireperim/export/: __init__.py  geojson_kmz.py
src/fireperim/ingest/: __init__.py  base.py  firms.py
src/fireperim/processing/: __init__.py  cluster.py  perimeter.py  risk.py
src/fireperim/viz/: __init__.py  maps.py
src/fireperim/weather/: __init__.py  open_meteo.py
tests/: test_export.py  test_firms.py  test_multipass.py  test_ortho.py  test_processing.py  test_raster.py  test_weather_risk.py
web/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js
web/public/ir/: bounds.json  perimeter.geojson  thermal_cog.tif
web/public/ir/desmoke/: bounds.json
web/public/ir/georef/: bounds.json  (+2 more)
web/src/: App.jsx  api.js  config.js  index.css  weather.js
web/src/components/: Header.jsx  MapView.jsx  Sidebar.jsx
(+6 files in other folders)
